# Chip-8-Emulator

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: chip8.h
src/: chip8.cpp  chip8.h
